# flint

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release-desktop.yml
docs/: design-system.md  desktop-release.md  product-spec.md  roadmap.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: App.tsx  routes.tsx
src/components/cards/: HealthScoreCard.tsx  StatCard.tsx
src/components/charts/: CashFlowChart.tsx  NetWorthChart.tsx  ProjectionChart.tsx  SpendingPieChart.tsx
src/components/forms/: AccountForm.tsx  BudgetForm.tsx  TransactionForm.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: Button.tsx  ConfirmDialog.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Select.tsx  TaxResidencySelect.tsx  Toast.tsx
src/data/: sampleData.ts
src/data/taxes/: jurisdictions.ts
src/lib/desktop/: updater.ts
src/lib/finance/: budget.ts  cashflow.test.ts  cashflow.ts  cashflowForecast.ts  csvImport.ts  healthScore.ts  onboarding.test.ts  onboarding.ts  projections.test.ts  projections.ts
src/lib/simulations/: monteCarlo.test.ts  monteCarlo.ts  (+1 more)
src/pages/: Bills.tsx  Budget.tsx  Dashboard.tsx  Goals.tsx  ImportExport.tsx  MonteCarlo.tsx  Onboarding.tsx  Projections.tsx  Scenarios.tsx  Settings.tsx  Taxes.tsx  Transactions.tsx
src/store/: useFinanceStore.ts  useSettingsStore.ts
src/styles/: globals.css
src/types/: finance.ts  planning.ts  scenario.ts  tax.ts
(+10 files in other folders)
