[package]
name = "flint"
version = "0.2.0"
description = "Flint personal finance desktop app"
authors = ["csgenos"]
edition = "2021"

[lib]
name = "flint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

